# deckdown

./: .gitignore  Makefile  README.md  hello.py  planning.md  pyproject.toml  tmp_axes_points.pptx  tmp_chart.pptx  tmp_chart2.pptx  tmp_setaxes.pptx
data/: .gitignore  README.md
data/samples/charts_basic/: README.md  expected.md
data/samples/diff_pair/v1/: README.md
data/samples/diff_pair/v2/: README.md
data/samples/edge_cases/: README.md
data/samples/notes/: README.md
data/samples/tables_basic/: README.md  expected.md
data/samples/text_basic/: README.md  expected.md  text_basic.md
scripts/: README.md  generate_samples.py
src/deckdown/: __init__.py  assemble.py  ast.py  cli.py  io.py  loader.py  media.py  models.py  reader.py  validate.py
src/deckdown/charts/: utils.py
src/deckdown/color/: theme.py
src/deckdown/extractors/: ast.py  context.py  group.py  text.py  utils.py
src/deckdown/extractors/handlers/: base.py  basic_line_handler.py  chart_handler.py  picture_handler.py  table_handler.py  text_handler.py
src/deckdown/preview/: html.py
src/deckdown/renderers/: __init__.py  markdown.py
src/deckdown/text/: emit.py
src/deckdown/utils/: __init__.py  redact.py  slide_range.py
tests/unit/: test_redact.py  test_slide_range.py
tests/unit/deckdown/assemble/: test_chart_assemble.py  test_chart_axes_apply.py  test_scatter_bubble_assemble.py  test_slide_size.py  test_table_basic_picture.py
tests/unit/deckdown/cli/: test_assemble.py  test_cli.py  test_preview.py  test_schema.py  test_validate.py
tests/unit/deckdown/io/: test_io.py
(+17 files in other folders)
